--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,34 @@
 Package: TagR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: SHARE's TagR package that uses machine learning to identify a comment's relevant topics
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: as.person(c(
+  "Rose Pegler <rose.pegler@sharecreative.com> [aut]"
+  ))
+Description: Functions that take the user through the stages of pre-processing, EDA, model building and prediction.
 License: What license is it under?
 Encoding: UTF-8
+Depends: R (>= 4.0.2)
 LazyData: true
+Imports:
+    devtools (>= 2.3.1),
+    dplyr (>= 1.0.2),
+    tidyverse (>= 1.3.0),
+    stopwords (>= 2.0),
+    tm (>= 0.7),
+    tidytext (>= 0.2.6),
+    ParseR (>= 0.1.0),
+    DiagrammeR (>= 1.0.6),
+    gridExtra (>= 2.3),
+    xgboost (>= 1.2.0),
+    caret (>= 6.0),
+    Matrix (>= 1.2),
+    knitr (>= 1.3),
+    tidylo (>= 0.1),
+    tidyr (>= 1.1.2),
+    ggrepel (>= 0.8.2),
+    xgboostExplainer (>= 0.1),
+    rlang (>= 0.4.7),
+    R.utils (>= 2.10.1),
+    progress (>= 1.2.2)
+    
