--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,5 +30,6 @@ Imports:
     R.utils (>= 2.10.1),
     progress (>= 1.2.2),
     stringr(>= 1.4.0),
-    ggplot2 (>= 3.3.2)
+    ggplot2 (>= 3.3.2),
+    magrittr (>= 1.5)
 RoxygenNote: 7.1.1
