--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(bind_numerical_vars)
 export(create_dt_matrices)
+export(hyperparameter_tuning)
 export(plot_important_terms)
 export(preprocess_data)
 export(top_n_terms)
