--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bind_numerical_vars)
 export(create_dt_matrices)
 export(hyperparameter_tuning)
 export(plot_important_terms)
+export(predict_topics)
 export(preprocess_data)
 export(top_n_terms)
 export(topic_frequency)
