--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(bind_numerical_vars)
 export(build_topic_explainer)
 export(create_dt_matrices)
+export(explain_comment)
 export(hyperparameter_tuning)
 export(plot_important_terms)
 export(predict_topics)
